# NetVidRew

./: .gitignore  README.md
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  mpv.rs  playlist.rs  state.rs  utils.rs  win32.rs
