[package]
name = "net-vid-rew"
version = "0.1.0"
description = "极简本地视频播放器"
authors = ["you"]
edition = "2021"

[lib]
name = "net_vid_rew_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "net-vid-rew"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
